--- a/colab_runner.ipynb
+++ b/colab_runner.ipynb
@@ -1,18 +1,27 @@
 {
   "cells": [
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ValerioFirmanoo/mldl23-ego-1/blob/master/colab_runner.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yhBRhs14YVK-"
+      },
       "source": [
         "# Colab Runner for MLDL23-Ego"
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "view-in-github"
       },
       "source": [
@@ -20,9 +29,10 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "cpOI-h4OYVLE"
+      },
       "source": [
         "## EPIC-Kitchens-55 dataset\n",
         "\n",
@@ -40,7 +50,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "s_gKtfqHYVLF"
+      },
       "outputs": [],
       "source": [
         "# Mount google drive \n",
@@ -51,7 +63,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "bQD3eK9JYVLG"
+      },
       "outputs": [],
       "source": [
         "%%bash\n",
@@ -74,20 +88,38 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "ZDrEwSIQYVLH"
+      },
       "source": [
         "## Running the code"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "31xCeYMnc67M"
+        "id": "31xCeYMnc67M",
+        "outputId": "b5ce1360-f4e8-45c6-81ac-cd3dfa569673",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'mldl23-ego'...\n",
+            "remote: Enumerating objects: 48, done.\u001b[K\n",
+            "remote: Counting objects: 100% (6/6), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (6/6), done.\u001b[K\n",
+            "remote: Total 48 (delta 1), reused 0 (delta 0), pack-reused 42\u001b[K\n",
+            "Unpacking objects: 100% (48/48), 90.18 MiB | 6.90 MiB/s, done.\n"
+          ]
+        }
+      ],
       "source": [
         "# Clone the public repository (or your repository)\n",
         "!git clone https://github.com/EgovisionPolito/mldl23-ego.git mldl23-ego"
@@ -121,17 +153,19 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "LhzHY6N6YVLJ"
+      },
       "source": [
         "**TIP**: As the creation of the Conda Environment may be a slow process, you may look at the `conda-pack` package to store the environment in a .tar.gz archive you can store on Google Drive and restore later."
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "2oFWFjIsYVLK"
+      },
       "source": [
         "## Features extraction"
       ]
@@ -159,9 +193,8 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "authorship_tag": "ABX9TyMA44pwS84HIKtaEclSmH2W",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "gpuClass": "standard",
     "kernelspec": {
