--- a/colab_runner.ipynb
+++ b/colab_runner.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ValerioFirmanoo/mldl23-ego-1/blob/master/colab_runner.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/filipgrob/mldl23-ego-1/blob/master/colab_runner.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -50,7 +50,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provo a fare una modifica e committare"
+        "Provo a fare una modifica e committare, prova pippo"
       ],
       "metadata": {
         "id": "Y_syU_N5il98"
@@ -107,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "31xCeYMnc67M",
         "colab": {
